fix name overflow

--- a/layouts/header/style.css
+++ b/layouts/header/style.css
@@ -433,7 +433,6 @@ input, textarea {
     text-decoration: none;
     background-color: var(--border);
     background-image: linear-gradient(var(--background-color),var(--border));
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(enabled=false)";
     border-color: var(--border);
 }
 .nice-button:disabled {
