--- a/layouts/notifications/style.css
+++ b/layouts/notifications/style.css
@@ -72,7 +72,8 @@ body {
     left: 95px;
     margin: 0;
     position: relative;
-    width: fit-content
+    width: 195px;
+    overflow-x: hidden
 }
 
 #user-handle {
@@ -351,7 +352,6 @@ body {
 }
 
 .nice-button:hover:not([disabled]) {
-    -ms-filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
     background-color: var(--border);
     background-image: linear-gradient(var(--background-color), var(--border));
     border-color: var(--border);
