--- a/layouts/tweet/style.css
+++ b/layouts/tweet/style.css
@@ -72,7 +72,8 @@ body {
     left: 95px;
     margin: 0;
     position: relative;
-    width: fit-content
+    width: 195px;
+    overflow-x: hidden
 }
 
 #user-handle {
@@ -354,7 +355,6 @@ body {
 }
 
 .nice-button:hover:not([disabled]) {
-    -ms-filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
     background-color: var(--border);
     background-image: linear-gradient(var(--background-color), var(--border));
     border-color: var(--border);
@@ -962,7 +962,6 @@ a:hover,
 }
 
 .tweet-footer-favorites {
-    display: inline-block;
     display: inline-flex;
     float: left;
     margin-left: 10px;
